# autoresearch

./: .env  .gitignore  2601_ground_truth_input_data_mapped.csv  prepare.py  program.md  pyproject.toml  reset-git-history.sh  train.py
